<resources>
    <string name="app_name">RecipeApp</string>
    <string name="image_of_a_recipe">Image of a recipe</string>
    <string name="nome_da_receita">nome da receita</string>
    <string name="favourites">Favourites</string>
    <string name="logout">Logout</string>
    <string name="buscar">Buscar</string>
    <string name="search">Search</string>
    <string name="ingredientes">ingredients</string>
    <string name="site_original">original site</string>
    <string name="welcome_to_your_recipe_application">Welcome to your recipe application!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="se_o_registro_for_aceito_voc_retornar_a_tela_inicial">Se o registro for aceito você retornará a tela inicial</string>
    <string name="logscreen">If successfully registered you will return to the login screen</string>
</resources>